--- a/styles/global.css
+++ b/styles/global.css
@@ -30,3 +30,16 @@ body {
     background-color: var(--bg-color);
     color: var(--text-color-primary);
 }
+
+h1, h2, h3 {
+    font: inherit;
+}
+
+a {
+    text-decoration: none;
+    color: inherit /* cor do texto do pai */
+}
+
+a:hover{
+    color: var(--brand-color-light);
+}
