--- a/styles/global.css
+++ b/styles/global.css
@@ -30,10 +30,10 @@ body {
     background-color: var(--bg-color);
     color: var(--text-color-primary);
 }
-.container {
+#container {
     max-width: 1280px;
     margin-inline: auto;
-   padding-inline: 32px;
+    padding-inline: 32px;
 }
 
 h1, h2, h3 {
@@ -49,12 +49,11 @@ a:hover{
     color: var(--brand-color-light);
 }
 
-/* ulility-first*/
-/* vai usar apenas um grid*/
-.grid {
-    display: grid;
+
+img {
+    max-width: 100%;
 }
 
-.grid-flow-col {
-    grid-auto-flow: column;
+main {
+    margin-top: 40px;
 }
