--- a/styles/global.css
+++ b/styles/global.css
@@ -30,11 +30,7 @@ body {
     background-color: var(--bg-color);
     color: var(--text-color-primary);
 }
-#container {
-    max-width: 1280px;
-    margin-inline: auto;
-    padding-inline: 32px;
-}
+
 
 h1, h2, h3 {
     font: inherit;
@@ -53,7 +49,12 @@ a:hover{
 img {
     max-width: 100%;
 }
+.container {
+    max-width: 1280px;
+    margin-inline: auto;
+    padding-inline: 32px;
+}
 
 main {
-    margin-top: 40px;
+    margin-block: 40px;
 }
