--- a/styles/global.css
+++ b/styles/global.css
@@ -8,12 +8,12 @@
 
 :root {
     --brand-color-light: #60A5FA;
-    --brand-color-dark: #1d4ed8;
+    --brand-color-dark: #1D4ED8;
     
     --bg-color: #0F172A;
     --stroke-color: #1E293B;
 
-    --text-color-primary:  #F1F5F9;
+    --text-color-primary: #F1F5F9;
     --text-color-secondary: #CBD5E1;
 
     --font-family: 'Archivo', sans-serif;
@@ -21,8 +21,8 @@
     --h2: 800 16px/140% var(--font-family);
     --h3: 800 14px/140% var(--font-family);
     --text-span: 600 14px/145% var(--font-family);
-    --text-p: 400 16px/145% var(--font-family);
-    --text-small: 400 14px/160% var(--font-family);
+    --text: 400 16px/140% var(--font-family);
+    --text-sm: 400 14px/160% var(--font-family);
 }
 
 body {
