--- a/styles/sections.css
+++ b/styles/sections.css
@@ -32,10 +32,23 @@
             figcaption {
                 position: absolute;
                 bottom: 0;
+
                 padding: 24px;
 
+                &:has(.text-lg) {
+                    padding: 12px;
+                }
                 h2 {
                     margin-top: 8px;
+
+
+                    /*Limitando texto com com 3 pontinhos*/
+                    display: -webkit-box;
+                    -webkit-line-clamp: 3;
+                    line-clamp: 3;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
                 }
             }
 
