--- a/styles/sections.css
+++ b/styles/sections.css
@@ -1,8 +1,33 @@
 
+section header {
+    border-top: 1px solid var(--stroke-color) ;
+    padding-block: 12px 16px;
+    font: var(--text-span);
+
+
+
+     a {
+        justify-self: end;
+        align-items: center;
+        gap: 8px;
+
+        span {
+            background-image: url(../assets/icons/ArrowRight.svg);
+            width: 16px;
+            height: 16px;
+        }
+
+        &:hover  span{
+            background-image: url(../assets/icons/ArrowRight-hover.svg);
+        }
+    }
+}
+
+
+
 
 #featured{
-    
- 
+
 /* pegando img dentro featured*/
     img {
             height: 100%;
@@ -41,7 +66,6 @@
                 h2 {
                     margin-top: 8px;
 
-
                     /*Limitando texto com com 3 pontinhos*/
                     display: -webkit-box;
                     -webkit-line-clamp: 3;
@@ -56,4 +80,17 @@
         }
 }
 
+
+#weekly {
+
+
+    &>div {
+        grid-template-columns: repeat(4, 300px);
+    }
+
+
+    img{
+        height: 160px;
+    }
+}
 
