--- a/styles/global.css
+++ b/styles/global.css
@@ -57,7 +57,16 @@ img {
 
 main {
     margin-block: 40px;
-    gap: 80px;
+    row-gap: 80px;
+    column-gap: 32px;
+
+    grid-template-columns: 2fr 2fr;
+
+    grid-template-areas: 
+    "featured featured"
+    "weekly weekly"
+    "ai aside"
+    ;
 }
 
 .content-tag {
